--- a/examples/dialog/2_sequences.yaml
+++ b/examples/dialog/2_sequences.yaml
@@ -1,53 +1,66 @@
-default_inputs:
-  - slack
-sequences:
-  - name: greating sequence
-    steps:
-      - name: ask for name
-        type: bash
-        match:
-          - field: req.direct
-            value: true
-          - field: req.message
-            regexp: '(Hi|hi|Hello|hello)'
+sequencer:
+  env:
+    response: "Hello,"
+  default_inputs:
+    - slack
+  sequences:
+    - name: greating sequence
+      steps:
+        - name: ask for name
+          type: bash
+          match:
+            - or:
+              - field: req.direct
+                value: true
+              - field: req.mentioned
+                value: true
+            - field: req.message
+              regexp: '(Hi|hi|Hello|hello)'
+          command:
+            - echo Hi <@$REQ_CHAT_USER>, what is your name?
+          output:
+            destination: slack
+            encoding: plain
+            type: callback
+          export:
+            - current: req.chat_user
+              new: chat_user
+        - name: greeting
+          type: bash
+          timeout: 300
+          match:
+            - or:
+                - field: req.direct
+                  value: true
+                - field: req.mentioned
+                  value: true
+            - field: req.chat_user
+              compare: export.chat_user
+            - field: req.message
+              regexp: '(My|my) name is (?P<name>[A-Za-z]+)'
+          command:
+            - echo $ENV_RESPONSE $MATCH_NAME
+    - name: repeating sequence
+      steps:
+        - name: repeat
+          type: bash
+          match:
+            - field: message
+              regexp: '^Repeat: (?P<msg>.*)'
+          command:
+            - echo $MATCH_MSG
+    - name: request debug sequence
+      steps:
+        - name: debug
+          type: bash
+          match:
+            - field: req.message
+              regexp: '^Debug: .*'
+          command:
+            - echo $REQJSON
+    - steps:
+      - type: bash
+        inputs:
+          - cli
         command:
-          - echo Hi <@$REQ_CHAT_USER>, what is your name?
-        export:
-          - current: req.chat_user
-            new: chat_user
-      - name: greeting
-        type: bash
-        timeout: 300
-        match:
-          - field: req.direct
-            value: true
-          - field: req.chat_user
-            compare: export.chat_user
-          - field: req.message
-            regexp: '(My|my) name is (?P<name>[A-Za-z]+)'
-        command:
-          - echo $ENV_RESPONSE $MATCH_NAME
-  - name: repeating sequence
-    steps:
-      - name: repeat
-        type: bash
-        match:
-          - field: message
-            regexp: '^Repeat: (?P<msg>.*)'
-        command:
-          - echo $MATCH_MSG
-  - name: request debug sequence
-    steps:
-      - name: debug
-        type: bash
-        match:
-          - field: req.message
-            regexp: '^Debug: .*'
-        command:
-          - echo $REQJSON
-  - steps:
-    - type: bash
-      inputs:
-        - cli
-      command:
-        - echo $ENV_RESPONSE $REQ_NAME
+          - echo $ENV_RESPONSE $REQ_NAME
