--- a/examples/test/2_sequences.yaml
+++ b/examples/test/2_sequences.yaml
@@ -13,20 +13,19 @@ sequencer:
         - name: ask for name # Name of the step for logs (optional)
           match: (req['direct'] or req['mentioned']) and match_re(req['message'], '(Hi|hi|Hello|hello)')
           script:
-            - resp.callback('Hi <@{}>, what is your name?'.format(req['user_id'])) #send plain response back to connector
+            - resp.respond('Hi <@{}>, what is your name?'.format(req['user_id'])) #send plain response back to connector
             - export["chat_user"] = req['user_id'] #export dict will be copied to next step
         - name: greeting
           timeout: 60 # Timeout for this step in seconds. Sequence will be reset if no matched events until timeout
           match: (req['direct'] or req['mentioned']) and req['user_id'] == export['chat_user'] and match_re(req['message'], '(My|my) name is (?P<name>[A-Za-z]+)')
-          script: callback('{} {}'.format(env['response'], match['name']))
+          script: respond('{} {}'.format(env['response'], match['name']))
     - name: approving sequence
       steps:
         - name: start
           match: "match_re(req['message'], '^(<@.*> )?Approve: (?P<count>.*)')"
           vars:
             response:
-              user_name:
-                - *slack_user
+              user_name: *slack_user
               attachments:
                 - callback_id: "approve_sequence_"
                   attachment_type: "default"
@@ -43,7 +42,7 @@ sequencer:
           script:
             - vars['response']['attachments'][0]['callback_id'] = vars['response']['attachments'][0]['callback_id']+str(rand_int(10000))
             - send('slack', vars["response"])
-            - callback('Asking users for {} approves'.format(match['count']))
+            - respond('Asking users for {} approves'.format(match['count']))
             - export['channel_id'] = req['channel_id']
             - export['count'] = int(match['count'])
             - export['callback_id'] = vars['response']['attachments'][0]['callback_id']
@@ -52,7 +51,7 @@ sequencer:
           match: req['callback_id'] == export['callback_id'] and req['action_value'] == 'approve' and req['user_name'] in export['users']
           script: |
             export['count'] = export['count'] - 1
-            callback('Thank you!')
+            respond('Thank you!')
             if export['count'] > 0:
               send('slack', {'channel_id': export['channel_id'], 'data': 'Approved by <@{}>! {} approves left.'.format(req['user_id'], export['count'])})
               repeat()
@@ -62,7 +61,7 @@ sequencer:
       steps:
         - name: repeat
           match: "match_re(req['message'], '^(@.* )?Repeat: (?P<msg>.*)')"
-          script: callback(match['msg'])
+          script: respond(match['msg'])
     - name: always direct response
       steps:
         - match: "match_re(req['message'], '^(@.* )Direct: (?P<msg>.*)')"
@@ -74,17 +73,16 @@ sequencer:
         max_execution_time: 60
         script:
               - sleep(match['duration'])
-              - callback('Was sleeping for {} seconds'.format(match['duration']))
+              - respond('Was sleeping for {} seconds'.format(match['duration']))
     - name: request debug sequence
       steps:
         - name: debug
           match: "(req['direct'] or req['mentioned']) and match_re(req['message'], '(@.* )?Debug$')"
-          script: "callback(json_dump({'req': req, 'env': env}))"
+          script: "respond(json_dump({'req': req, 'env': env}))"
     - name: Debug HTTP
       steps:
         - inputs:
-          - http
-          match: 1 == 1
+            - http
           script: |
             debug(type(req['http_method']))
             debug(req['http_method']=='POST')
@@ -94,7 +92,7 @@ sequencer:
           inputs:
             - http
           match: match_re(req['http_uri'], '^/debug')
-          script: "callback(json_dump({'req': req, 'env': env}))"
+          script: "respond(json_dump({'req': req, 'env': env}))"
     - name: Message from HTTP to Slack
       steps:
         - inputs:
@@ -102,18 +100,18 @@ sequencer:
           match: match_re(req['http_path'], '^/message$') and type(var_get('req.http_form.message.0')) == 'string' and type(var_get('req.http_form.user.0')) == 'string'
           script: |
             send('slack', {'user_name': var_get('req.http_form.user.0'), 'data': var_get('req.http_form.message.0')})
-            callback('Sent "{}" to {}'.format(var_get('req.http_form.message.0'), var_get('req.http_form.user.0'))
+            respond('Sent "{}" to {}'.format(var_get('req.http_form.message.0'), var_get('req.http_form.user.0'))
     - name: Message from JSON HTTP to Slack
       steps:
         - inputs:
             - http
-          match: req['http_method'] == 'POST'
+          match: req['http_method'] == 'POST' and match_re(req['http_path'], '^/message-json$')
           script: |
             send('slack', {'user_name': var_get('req.http_json.user'), 'data': var_get('req.http_json.message')})
-            callback('Sent "{}" to {}'.format(var_get('req.http_json.message'), var_get('req.http_json.user')))
+            respond('Sent "{}" to {}'.format(var_get('req.http_json.message'), var_get('req.http_json.user')))
     - name: Debug in JSON
       steps:
         - inputs:
           - http
           match: match_re(req['http_uri'], '^/json')
-          script: "callback(json_dump({'req': req, 'env': env'}))"
+          script: "respond(json_dump({'req': req, 'env': env'}))"
